# microsoft-mcp

./: .coderabbit.yaml  .env.example  README.md  pyproject.toml
.bmad-core/agents/: bmad-master.md
.serena/memories/: codebase_structure.md  coding_standards.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
docs/specs/: mcp-resources-prompts.md
src/microsoft_mcp/: auth.py  auth_tool.py  calendar_tool.py  contact_tool.py  email_tool.py  file_tool.py  graph.py  server.py
tests/: test_nuclear_tools.py
